@@ -10,9 +10,9 @@
 
   <frameset rows='30,*' border='1'>
     <frame name='titlebar' src='/titlebar.html' scrolling='no' />
-    <frameset cols='25%,*' border='3'>
+    <frameset cols='30%,*' border='3'>
       <frame name='feed' src='/raggle/feed' scrolling='yes' />
-      <frameset rows='40%,*' border='3'>
+      <frameset rows='60%,*' border='3'>
         <frame name='item' src='/raggle/item' scrolling='auto' />
         <frame name='desc' src='/raggle/desc' scrolling='auto' />
       </frameset>
